# ghostmail

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scheduler/: Register-GhostMailTasks.ps1  Run-GhostMail.ps1  Unregister-GhostMailTasks.ps1
src/ghostmail/: __init__.py  __main__.py  action_triage.py  ai_engine.py  batch_sorter.py  cli.py  config.py  database.py  gmail_gateway.py  job_classifier.py  mcp_server.py
src/ghostmail/modules/: __init__.py  archivist.py  contacts.py  curator.py  expense_tracker.py  operator.py  political_unsub.py  research.py
tests/: test_action_triage.py  test_archivist.py  test_batch_sorter_auth.py  test_job_classifier.py
